--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/fdelfff/nodejs-app#readme",
   "dependencies": {
-    "axios": "^0.21.0"
+    "axios": ">=1.13.5"
   }
 }
