--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/fdelfff/nodejs-app#readme",
   "dependencies": {
-    "axios": ">=1.13.5"
+    "axios": ">=1.13.5",
+    "express": "^5.2.1"
   }
 }
