--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CodeQL Analysis
+name: Security and Build Pipeline
 
 on:
   push:
@@ -9,8 +9,8 @@ on:
     - cron: '30 2 * * 0'
 
 jobs:
-  analyze:
-    name: Analyze
+  codeql-scan:
+    name: CodeQL Scan
     runs-on: ubuntu-latest
     permissions:
       actions: read
@@ -27,14 +27,34 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v3
+      uses: github/codeql-action/init@v4
       with:
         languages: ${{ matrix.language }}
 
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v3
+      uses: github/codeql-action/autobuild@v4
 
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v3
+      uses: github/codeql-action/analyze@v4
       with:
         category: "/language:${{ matrix.language }}"
+        fail-on: error
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: codeql-scan
+    permissions:
+      contents: read
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '22'
+
+    - name: Install dependencies
+      run: npm install
